# Weston-kiosk-shell-DPMS

./: .gitignore  .project  LICENSE  README.md  meson.build
protocol/: kiosk-dpms.xml  weston-shell-dpms.xml
src/: dpms-client.c  kiosk-dpms.c  kiosk-shell-client.h  kiosk-shell-dpms-interface.c  kiosk-shell-dpms-interface.h  kiosk-shell-dpms.c  test.c  weston-dpms.c  weston-shell-dpms.c
